<resources>
    <string name="app_name">nomnom</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="event_form_title">Title</string>
    <string name="event_form_location">Location Details</string>
    <string name="event_form_start">Start Time</string>
    <string name="event_form_end">End Time</string>
    <string name="event_form_details">Food</string>
    <string name="event_form_startdate">Start Date</string>
    <string name="event_form_enddate">End Date</string>
    <string name="add_event_button">Add Event</string>
    <string name="menu_add_event">Add Event</string>
    <string name="title_activity_main">Map</string>
    <string name="cancel_button">Cancel</string>
    <string name="addPhoto">Add Photo</string>
    <string name="photoPreview"></string>
    <string name="editEvent">Edit event</string>
    <string name="refresh_button">Refresh</string>


</resources>