<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddEventActivity">

        <Button
            android:id="@+id/add_button"
            android:onClick="onClickAdd"
            android:background="@color/colorAccent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:text="Add"/>

        <include layout="@layout/content_add_event" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            tools:context="edu.iastate.nomnom.MainActivity" >

                <TextView
                    android:id="@+id/titleText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/event_form_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/titleInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    >Title</EditText>

                <TextView
                    android:id="@+id/deetsText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/event_form_details"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/deetsInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:hint="Free ice cream!"
                    />

                <TextView
                    android:id="@+id/locationText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/event_form_location"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/locationInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:hint="Outside of the library"
                    />

                <TextView
                    android:id="@+id/startText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/event_form_start"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TimePicker
                    android:id="@+id/start_time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="108dp"
                    android:timePickerMode="spinner" />

                <TextView
                    android:id="@+id/endText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/event_form_end"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TimePicker
                    android:id="@+id/end_time_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="131dp"
                    android:timePickerMode="spinner" />

                <Button
                    android:id="@+id/photoButton"
                    android:layout_width="112dp"
                    android:layout_height="63dp"
                    android:text="@string/addPhoto" />

                <ImageView
                    android:id="@+id/photoPreview"
                    android:layout_width="162dp"
                    android:layout_height="118dp"
                    android:layout_weight="0.4"

                    />

        </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>